--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<title>Libraries.io browser</title>
+		<style>
+			html, body {
+				margin: 0;
+				padding: 0;
+				height: 100vh;
+
+				font-family: Arial, Helvetica, sans-serif;
+				font-size: 16px;
+			}
+		</style>
+
+		<link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body>
 		<div id="app"></div>
