--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
 		<title>Libraries.io browser</title>
 		<style>
 			html, body {
@@ -15,10 +15,10 @@
 			}
 		</style>
 
-		<link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
+		<script src="https://use.fontawesome.com/579ece4107.js"></script>
 	</head>
 	<body>
 		<div id="app"></div>
-		<script src="/dist/build.js"></script>
+		<script src="dist/build.js"></script>
 	</body>
 </html>
